@@ -50,5 +50,7 @@
 /uigenerator1
 /uigenerator2
 /uigenerator3
+/uigenerator4
+/uigenerator4.i18n.C
 /validatedinput
 /wordwraplabel
