@@ -1,3 +1,7 @@
+2019-05-27  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Create <label>s from the theme file.
+
 0.23
 
 2019-05-18  Sam Varshavchik  <mrsam@courier-mta.com>
